# app_files

./: .codex_targets.txt  .codex_test_targets.txt  .codex_tests_done.txt  .coveragerc  .gitattributes  .gitignore  .impeccable.md  .pre-commit-config.yaml  .xlsx_config.toml  AGENTS.md  CHANGELOG.md  LICENSE  Makefile  README.md  THIRD_PARTY_NOTICES.md  app.py  attribute_activity.example.json  brand_aliases.json  category_aliases.example.json  chatgpt-app-submission.json  ci.yml  codex_done_tests.py  delete_caches.py  dev-requirements.txt  modules_to_scan.txt  modules_to_target.txt  package-lock.json  package.json  play_smoke.py  pyproject.toml  pyrightconfig.json  requirements.txt  run_codex_test_repair.py  tests_tagging_stub.py  tests_to_scan.txt
config/: PERMISSIONS.md  category_websites.json  fee_patterns.json  ledger_ignore_patterns.json  merchant_brand_websites.json  normalisation_stopwords.en.json  normalisation_stopwords.it.json  pdp_explicit_declaration_rules.json  pdp_explicit_declaration_rules.schema.json  pdp_signal_quality.json  permission_structure.json  sales_join_keys.json  secrets.example.toml  statement_ignore_patterns.json  vision_allowlist.json  web_allowlist.json
docs/: available_plot_metrics_contract.md  brand_fit_packages.md  caches.md  category_filters_pareto_price.md  cdp_collect_links.md  cdp_fetch_pdp.md  cdp_probe.md  chart_selection_manifest.md  charting_loc_migration_tasks.md  chewy_listing_discovery.md  clara_onboarding_email_template_it.md  clean_taxonomy.md  cleanup_sessions.md  cli_index.md  codex_plugin_guide_checklist.md  pdf_journal.md  (+43 more)
(+2411 files in other folders)
